--- a/dataDesign/verticalTree/verticalTree.html
+++ b/dataDesign/verticalTree/verticalTree.html
@@ -7,6 +7,15 @@
   <title>Document</title>
   <link rel="stylesheet" href="./verticalTree.css"/>
   <script src="./verticalTree.js"></script>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+    li {
+      list-style: none;
+    }
+  </style>
   <script>
     window.onload = () => {
       const data = [
